--- a/realservice/.envrc.template
+++ b/realservice/.envrc.template
@@ -1,6 +1,8 @@
 export NOTIFICATIONS_SERVICE_URL=
-export CF_SPACE_GUID=
 export UAA_URL=
 export NOTIFICATIONS_CLIENT_ID=
 export NOTIFICATIONS_CLIENT_SECRET=
 export MAILHOG_URL=
+export CF_API=
+export CF_USERNAME=
+export CF_PASSWORD=
