Allow operator to configure alerts using CF org and space names
- Remove cf_space_guid from configuration
- Requires a CF user who can see the org and space. The least
  privileged user is a SpaceAuditor.

Signed-off-by: Josh Hill <jhill@pivotal.io>

--- a/realservicetests/.envrc.template
+++ b/realservicetests/.envrc.template
@@ -4,5 +4,5 @@ export NOTIFICATIONS_CLIENT_ID=
 export NOTIFICATIONS_CLIENT_SECRET=
 export MAILHOG_URL=
 export CF_API=
-export CF_USERNAME=
-export CF_PASSWORD=
+export CF_ADMIN_USERNAME=
+export CF_ADMIN_PASSWORD=
