Fetch the URL for uaa dynamically
[#133166641]

Signed-off-by: Alex Blease <ablease@pivotal.io>

--- a/realservicetests/.envrc.template
+++ b/realservicetests/.envrc.template
@@ -1,8 +1,7 @@
-export NOTIFICATIONS_SERVICE_URL=
-export UAA_URL=
-export NOTIFICATIONS_CLIENT_ID=
-export NOTIFICATIONS_CLIENT_SECRET=
-export MAILHOG_URL=
-export CF_API=
-export CF_ADMIN_USERNAME=
-export CF_ADMIN_PASSWORD=
+export NOTIFICATIONS_SERVICE_URL =
+    export NOTIFICATIONS_CLIENT_ID =
+    export NOTIFICATIONS_CLIENT_SECRET =
+    export MAILHOG_URL =
+    export CF_API =
+    export CF_ADMIN_USERNAME =
+    export CF_ADMIN_PASSWORD =
